# runa

./: README.md  pyproject.toml
src/execution_completion/: context.py  execution.py
src/execution_completion/model/: __init__.py  error.py
src/runa/: __init__.py  context.py  execution.py
src/runa/model/: entity.py  service.py
tests/: test_entity_type.py  test_execution.py
tests/execution/: test_completion.py  test_continuation.py  test_entity_change_state.py  test_entity_create_entity.py  test_entity_request_entity.py  test_entity_request_service.py  test_private_state.py
tests/model/: test_entity.py
