[project]
name = "execution-completion"
version = "0.1.0"
description = "Execution completion model"
readme = "README.md"
authors = [
  {name = "Yuriy Kehter", email = "yuriy.kehter@gmail.com"},
]
requires-python = ">=3.14.3"
dependencies = [
    "greenlet>=3.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "coverage>=7.13.4",
    "types-greenlet>=3.3.0.20251206",
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--import-mode=importlib"

[tool.uv.build-backend]
module-root = "src"
